2001-05-11  Harlan Stenn  <stenn@whimsy.udel.edu>

	* html/release.htm: Cleanup (at least).
	* html/refclock.htm: Cleanup (at least).
	* html/kern.htm: Cleanup (at least).
	* html/index.htm: Cleanup (at least).
	* html/extern.htm: Cleanup (at least).
	* html/driver1.htm: Cleanup (at least).
	* html/debug.htm: Cleanp (at least).
	* html/accopt.htm: KoD documentation update.
	From: Dave Mills.

	* configure.in: 4.0.99k34

	* ntpd/ntp_util.c (record_loop_stats): values are now passed in.
	* ntpd/ntp_loopfilter.c (local_clock): pass the values to
	record_loop_stats().
	* include/ntpd.h: Pass the parameters in to record_loop_stats().
	With the discipline loop opened (disable ntp) the local clock
	updates were not being sent to loopstats. That now is.
	From: Dave Mills.	

2001-05-10  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k33

	* ntpd/ntp_proto.c (receive): Validate the source port.  Lose
	NTPv1 support.
	* ntpd/ntp_loopfilter.c (local_clock): Sanity check sys_poll
	earlier instead of later.
	From: Dave Mills.

	* ntpd/refclock_oncore.c (oncore_msg_any): We don't always have
	GETTIMEOFDAY().

2001-05-09  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_shm.c (shm_poll): Apply JAN_1970 correction after
	calling TVTOTS(), just like everybody else does.
	From: David Malone <dwmalone@maths.tcd.ie>

	* ntpd/refclock_ulink.c: fixed 33x quality flag, added more
	debugging stuff, updated 33x time code explanation.
	From: s.l.smith (via j.c.lang).

2001-05-08  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k32

	* ntpd/ntp_loopfilter.c: rstclock now takes a 3rd argument, the
	last offset.
	(init_loopfilter): Use it.
	(local_clock): Use it.  Clean up the code.
	(loop_config): Use it.
	(rstclock): Implement it.  Clean up the code.
	From Dave Mills.

2001-05-06  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k31

	* ntpdc/ntpdc_ops.c (sysstats): That's 'bad packet format'